objects/Lead.object
<CustomObject>
    <fields>
        <fullName>AccountId__c</fullName>
        <label>AccountId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <formula>Account_Name__r.External_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DB_Created_Date_without_Time__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package.  If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Created Date without Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DB_Lead_Age__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>NOW() - LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Lead Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Sent_To_OpptyProduct__c</fullName>
        <description>This field updates to &quot;SentLead&quot; when lead is sent to Oppty Product</description>
        <label>Lead Sent To OpptyProduct</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityId__c</fullName>
        <label>OpportunityId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Oppty_Product_Funding_Type__c</fullName>
        <label>Funding Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACAP</fullName>
                </value>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>COST</fullName>
                </value>
                <value>
                    <fullName>MPP</fullName>
                </value>
                <value>
                    <fullName>PAR</fullName>
                </value>
                <value>
                    <fullName>PREM</fullName>
                </value>
                <value>
                    <fullName>SERV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Oppty_Product_Id__c</fullName>
        <label>ProductId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oppty_Product_Members_Contracts__c</fullName>
        <label>Projected Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oppty_Product_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Oppty_Product_Premium_Type__c</fullName>
        <label>Premium Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Oppty_Product_Funding_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PP</fullName>
                </value>
                <value>
                    <fullName>RP</fullName>
                </value>
                <value>
                    <fullName>RC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Oppty_Product_Projected_Contracts__c</fullName>
        <label>Projected Contracts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oppty_Product_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Won</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Oppty_Product_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Upsell</fullName>
                </value>
                <value>
                    <fullName>Add-On Gain</fullName>
                </value>
                <value>
                    <fullName>Add-On Loss</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WM4SF3__WalkMe_Engagement_Score__c</fullName>
        <label>WalkMe Engagement Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Win_Probability__c</fullName>
        <formula>IF(ISPICKVAL(Rating , &quot;Hot&quot;), 75, IF(ISPICKVAL(Rating , &quot;Warm&quot;), 50, 25))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Win Probability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>et4ae5__HasOptedOutOfMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Mobile_Country_Code__c</fullName>
        <label>Mobile Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <default>true</default>
                    <label>US</label>
                </value>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BL</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>All_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Leads</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>Qualified_Field_Funding_Type</fullName>
        <active>true</active>
        <description>Critical fields are populated before Lead Status can be changed to Qualified</description>
        <errorConditionFormula>AND
(
ISPICKVAL(Status, &quot;Qualified&quot;), 
ISBLANK(TEXT( Oppty_Product_Funding_Type__c ))
)</errorConditionFormula>
        <errorMessage>Fields Funding Type needs to be populated for Qualified status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Qualified_Field_Members_Contracts</fullName>
        <active>true</active>
        <description>Critical fields are populated before Lead Status can be changed to Qualified</description>
        <errorConditionFormula>AND
(
ISPICKVAL(Status, &quot;Qualified&quot;), 
ISBLANK(Oppty_Product_Members_Contracts__c) 
)</errorConditionFormula>
        <errorMessage>Fields Members Contracts needs to be populated for Qualified status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Qualified_Field_Premium_Type</fullName>
        <active>true</active>
        <description>Critical fields are populated before Lead Status can be changed to Qualified</description>
        <errorConditionFormula>AND
(
ISPICKVAL(Status, &quot;Qualified&quot;),
ISPICKVAL(Oppty_Product_Funding_Type__c, &quot;PREM&quot;),
ISBLANK(TEXT(Oppty_Product_Premium_Type__c))
)</errorConditionFormula>
        <errorMessage>When field Funding Type is PREM then Premium Type needs to be populated for Qualified status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Qualified_Field_Product_Projected</fullName>
        <active>true</active>
        <description>Critical fields are populated before Lead Status can be changed to Qualified</description>
        <errorConditionFormula>AND
(
ISPICKVAL(Status, &quot;Qualified&quot;), 
ISBLANK(Oppty_Product_Projected_Contracts__c) 
)</errorConditionFormula>
        <errorMessage>Fields Projected Contracts needs to be populated for Qualified status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Qualified_Field_Rating</fullName>
        <active>true</active>
        <description>Critical fields are populated before Lead Status can be changed to Qualified</description>
        <errorConditionFormula>AND
(
ISPICKVAL(Status, &quot;Qualified&quot;), 
ISBLANK(TEXT(Rating))
)</errorConditionFormula>
        <errorMessage>Fields Rating needs to be populated for Qualified status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Qualified_Field_Status</fullName>
        <active>true</active>
        <description>Critical fields are populated before Lead Status can be changed to Qualified</description>
        <errorConditionFormula>AND
(
ISPICKVAL(Status, &quot;Qualified&quot;), 
ISBLANK(TEXT(Oppty_Product_Status__c ))
)</errorConditionFormula>
        <errorMessage>Fields Status needs to be populated for Qualified status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Qualified_Field_Type</fullName>
        <active>true</active>
        <description>Critical fields are populated before Lead Status can be changed to Qualified</description>
        <errorConditionFormula>AND
(
ISPICKVAL(Status, &quot;Qualified&quot;), 
ISBLANK(TEXT(Oppty_Product_Type__c))
)</errorConditionFormula>
        <errorMessage>Fields Type needs to be populated for Qualified status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Qualified_LockAllFields</fullName>
        <active>true</active>
        <description>Lead has been Qualified Lock all fields.</description>
        <errorConditionFormula>AND
(
  Lead_Sent_To_OpptyProduct__c = &quot;Sent&quot;,
   OR(
     ISCHANGED( Status ),
     ISCHANGED(Oppty_Product_Name__c),
     ISCHANGED(Rating),  
     ISCHANGED(Oppty_Product_Funding_Type__c),
     ISCHANGED(Oppty_Product_Premium_Type__c),
     ISCHANGED(Oppty_Product_Members_Contracts__c),
     ISCHANGED(Oppty_Product_Projected_Contracts__c),
     ISCHANGED(Oppty_Product_Status__c),
     ISCHANGED(Oppty_Product_Type__c),
     ISCHANGED(Salutation),
     ISCHANGED(FirstName),
     ISCHANGED(LastName),
     ISCHANGED(Email),
     ISCHANGED(Company),
     ISCHANGED(Opportunity_Name__c)
     )
)</errorConditionFormula>
        <errorMessage>This Lead has been Qualified field is Locked</errorMessage>
    </validationRules>
</CustomObject>